tests/NormalTests/paczka1/fuzzy1/89651158.err
Error in line 2: pdc6BGJvq1 A959 12,7
Error in line 8: A147 A147 11,3
Error in line 30: pdc6BGJvq1 A147 {{,6
Error in line 26: pdc6BGJvq1 A959 72,8
Error in line 31: pdc6BGJvq1 A147 94,0
